k8s-apps/media/qbittorrent/service.bt.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-08-28T23:36:23Z"
  labels:
    app: qbt
  name: qbt
  namespace: media
spec:
  ports:
  - name: bt-tcp
    port: 50505
    protocol: TCP
    targetPort: 50505
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  type: ClusterIP
