k8s-apps/media/qbittorrent/route.bt.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbt
  namespace: qbt
spec:
  entryPoints:
    - bt
  routes:
    - match: Host(`qbt.media.k3s.bholland.org`) || (Host(`media.k3s.bholland.org`) && PathPrefix(`/qbt/`))
      kind: Rule
      services:
        - name: qbt
          kind: Service
